<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_plugin_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kyungpyo94@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>rviz_rendering_tests</test_depend>
  <test_depend>rviz_visual_testing_framework</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
